engine-net-2/examples/Errors/MatchClassNotImplementedError.grs
new graph "Rules.grg"

eval [?[r(null)]\<class mc>]

quit
